--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -63,7 +63,23 @@ image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"
 
 ==== Java 13
 
-link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous releases, a new Java editor hint has been introduced for reverting from Text Block to String. 
+link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- Java editor hint has been introduced for converting to/from text blocks.
+
+[.feature]
+--
+image::jdk13-textblock.png[role="left", link="jdk13-textblock.png"]
+-- 
+
+- link:https://openjdk.java.net/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
+
+[.feature]
+--
+image::TextBlockToString.gif[role="left", link="TextBlockToString.gif"]
+--  
+
+==== Java 12
+
+link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
 
 ==== Java 11
  
